--- a/TreeControlInteractor/src/styles.less
+++ b/TreeControlInteractor/src/styles.less
@@ -3,14 +3,14 @@
     svg {
         margin-top: 2px;
     }
-    input[type="checkbox"]:checked + label::after {
+    input[type="checkbox"]:checked + label.treecontrol-label-normal::after {
         content: '';
         position: absolute;
         width: 1.2ex;
         height: 0.3ex;
         top: 0.9ex;
         left: 0.4ex;
-        border: 3px solid #21A3DA;
+        border: 3px solid white;
         border-top: none;
         border-right: none;
         -webkit-transform: rotate(-45deg);
@@ -19,30 +19,89 @@
         -ms-transform: rotate(-45deg);
         transform: rotate(-45deg);
     }
+    input[type="checkbox"]:checked + label.treecontrol-label-parent::after {
+        content: '';
+        position: absolute;
+        width: 1.2ex;
+        height: 0.3ex;
+        top: 0.9ex;
+        left: 0.4ex;
+        border: 3px solid white;
+        border-top: none;
+        border-right: none;
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+    }
+
     input[type="checkbox"] {
         line-height: 2.1ex;
     }
+
     input[type="radio"], input[type="checkbox"] {
         visibility: hidden;
         position: absolute;
         z-index: -1;
     }
-    input[type="checkbox"] + label {
+    input[type="checkbox"] + label.treecontrol-label-normal {
         position: relative;
         overflow: hidden;
         cursor: pointer;
     }
-    input[type="checkbox"] + label::before {
+    input[type="checkbox"] + label.treecontrol-label-normal::before {
         content: "";
         display: inline-block;
         vertical-align: -25%;
         height: 2ex;
         width: 2ex;
-        background-color: white;
         border: 1px solid rgb(166, 166, 166);
-        box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.25);
         margin-right: 0.5em;
     }
+        input[type="checkbox"] + label.treecontrol-label-parent-unselected {
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+    }
+    input[type="checkbox"] + label.treecontrol-label-parent-unselected::before {
+        content: "";
+        display: inline-block;
+        vertical-align: -25%;
+        height: 2ex;
+        width: 2ex;
+        border: 2px solid #1E88C3;
+        margin-right: 0.5em;
+    }
+
+    input[type="checkbox"]:checked + label.treecontrol-label-normal::before {
+        content: "";
+        display: inline-block;
+        vertical-align: -25%;
+        height: 2ex;
+        width: 2ex;
+        border: 1px solid rgb(166, 166, 166);
+        background-color: #1E88C3;
+        margin-right: 0.5em;
+    }
+
+    input[type="checkbox"]:checked + label.treecontrol-label-parent::before {
+        content: "";
+        display: inline-block;
+        vertical-align: -25%;
+        height: 2ex;
+        width: 2ex;
+        -webkit-box-shadow:inset 0px 0px 0px 1px #1E88C3;
+        -moz-box-shadow:inset 0px 0px 0px 1px #1E88C3;
+        box-shadow:inset 0px 0px 0px 1px #1E88C3;
+        border:1px solid white;
+        background-color:#1E88C3;
+        margin-right: 0.5em;
+    }
+    input[type="checkbox"]:checked + span {
+        display:none;
+    }
+
     li {
         position: relative;
         .arrow-bullet {
