DNN-10408: fixed input box styling

--- a/SearchableTags/src/style.less
+++ b/SearchableTags/src/style.less
@@ -36,6 +36,7 @@
         color: @bulgarianRose;
         float: left;
         outline: none !important;
+        box-sizing: content-box;
     }
     .tag {
         float: left;
