Adds label and tooltip stories

--- a/src/Tooltip/style.less
+++ b/src/Tooltip/style.less
@@ -1,5 +1,8 @@
 @import "../../styles/index";
 .dnn-ui-common-tooltip {
+    .icon{
+        display:inline;
+    }
     .tooltip-text {
         z-index: 10000;
         max-width: 255px;
