--- a/src/Tooltip/style.less
+++ b/src/Tooltip/style.less
@@ -1,95 +1,80 @@
 @import "../../styles/index";
-.dnn-ui-common-tooltip {
-    .tooltip-text {
-        z-index: 10000;
-        max-width: 255px;
-        text-align: center;
-        padding: 7px 15px;
-        pointer-events: auto !important;
-        word-wrap: break-word;
-        word-break: keep-all;
-        &:hover {
-            visibility: visible !important;
-            opacity: 1 !important;
-        }
-        &.place-top {
-            &:after {
-                border-top: 6px solid !important;
+.dnn-ui-common-tooltip {   
+    >div{
+        position: relative;
+    }    
+    .tooltip-overlay{
+        display: block;
+        font-family: Open Sans,sans-serif;
+        font-weight: 400;
+        font-size: 1rem;
+        position: absolute;
+        bottom: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        padding-bottom: 16px;        
+        transition: all 300ms ease-in-out;
+        display:flex;
+        justify-content: center;
+        min-width:200px;
+        .tooltip-inner{
+            background-color: rgba(0,0,0,0.8);
+            color: #fff;
+            padding:5px 10px;
+            border-radius: 5px;
+            position: relative;
+            &::before{
+                position: absolute;
+                display: block;
+                content: "";
+                left: 50%;
+                right: 0;
+                top: 100%;
+                border: 16px solid transparent;
+                margin-left: -16px;
+                border-top-color: rgba(0,0,0,0.8);
+                width: 0;
+                height: 0;
             }
         }
-        &.place-bottom {
-            &:after {
-                border-bottom: 6px solid !important;
-            }
+        &.tooltip-overlay--hidden{
+            opacity:0;
+            pointer-events: none;
         }
-        &.place-left {
-            &:after {
-                border-left: 6px solid !important;
-            }
-        }
-        &.place-right {
-            &:after {
-                border-right: 6px solid !important;
-            }
-        }
-    }
+    } 
     &.error {
         .icon svg {
             color: @alizarinCrimson;
             fill: @alizarinCrimson;
         }
-        .tooltip-text {
-            background-color: @alizarinCrimson !important;
-            color: white;
-            &.place-top {
-                &:after {
-                    border-top-color: @alizarinCrimson !important;
-                }
+        .tooltip-inner{
+            background-color: @alizarinCrimson;
+            &::before{
+                border-top-color: @alizarinCrimson;
             }
-            &.place-bottom {
-                &:after {
-                    border-bottom-color: @alizarinCrimson !important;
-                }
-            }
-        }
+        }    
     }
     &.warning {
         .icon svg {
             color: #EA9C00;
             fill: #EA9C00;
         }
-        .tooltip-text {
-            background-color: #EA9C00 !important;
-            color: white;
-            &.place-top {
-                &:after {
-                    border-top-color: #EA9C00 !important;
-                }
+        .tooltip-inner{
+            background-color: #EA9C00;
+            &::before{
+                border-top-color: #EA9C00;
             }
-            &.place-bottom {
-                &:after {
-                    border-bottom-color: #EA9C00 !important;
-                }
-            }
-        }
+        } 
     }
     &.info {
         .icon svg {
             color: @alto;
             fill: @alto;
         }
-        .tooltip-text {
-            background-color: @thunder !important;
-            color: white;
-            &.place-top {
-                &:after {
-                    border-top-color: @thunder !important;
-                }
-            }
-            &.place-bottom {
-                &:after {
-                    border-bottom-color: @thunder !important;
-                }
+        .tooltip-inner{
+            background-color: @alto;
+            &::before{
+                border-top-color: @alto ;
             }
         }
     }
@@ -98,32 +83,15 @@
             color: @cerulean;
             fill: @cerulean;
         }
-        .tooltip-text {
-            background-color: @cerulean !important;
-            color: white;
-            &.place-top {
-                &:after {
-                    border-top-color: @cerulean !important;
-                }
+        .tooltip-inner{
+            background-color: @cerulean;
+            &::before{
+                border-top-color: @cerulean ;
             }
-            &.place-bottom {
-                &:after {
-                    border-bottom-color: @cerulean !important;
-                }
-            }
-        }
+        }     
     }
     .icon svg {
         width: 20px;
         height: 20px;
-    }
-}
-
-.ToolTipPortal {
-    & > div {
-        z-index: 9999999 !important;
-    }
-    span {
-        margin-top: 1px !important;
-    }
+    }    
 }
