replaced rgb color by its name

--- a/src/Tooltip/style.less
+++ b/src/Tooltip/style.less
@@ -93,13 +93,13 @@
             fill: @alto;
         }
         .tooltip-inner{
-            background-color: rgb(75, 78, 79);
+            background-color: @thunder;
         }  
         .top .tooltip-inner::before{
-            border-top-color: rgb(75, 78, 79);;
+            border-top-color: @thunder;
         }
         .bottom .tooltip-inner::before{
-            border-bottom-color: rgb(75, 78, 79);;
+            border-bottom-color: @thunder;
         }
     }
     &.global {
